@@ -2,7 +2,9 @@ Version 1.56
 ------------
 Add "forcemandatorylock" mount option to allow user to use mandatory
 rather than posix (advisory) byte range locks, even though server would
-support posix byte range locks.
+support posix byte range locks.  Fix query of root inode when prefixpath
+specified and user does not have access to query information about the
+top of the share.
 
 Version 1.55
 ------------
